# Sonar

./: .gitignore  CONTRIBUTING.md  README.md  TASKS.md  TODO.md  build.sh  meson.build  meson_post_install.py
data/: io.github.tobagin.echo.appdata.xml.in  io.github.tobagin.echo.desktop.in  io.github.tobagin.echo.gschema.xml  io.github.tobagin.sonar.appdata.xml.in  io.github.tobagin.sonar.desktop.in  io.github.tobagin.sonar.gschema.xml  meson.build
data/icons/: meson.build
data/resources/: echo.gresource.xml  sonar.gresource.xml
data/ui/: main_window.blp  request_row.blp
docs/: VERSION_MANAGEMENT.md  cleanup-procedures.md  logging.md
packaging/: io.github.tobagin.echo-local.yml  io.github.tobagin.echo.yml  io.github.tobagin.sonar-local.yml  io.github.tobagin.sonar.yml
po/: LINGUAS  en.po  meson.build
scripts/: test_version_consistency.py  validate_build_version.py
src/: __init__.py  __main__.py  _version.py  _version.py.in  echo.in  error_dialog.py  error_handler.py  input_sanitizer.py  logging_config.py  main.py  main_window.py  meson.build  models.py  preferences.py  request_row.py  server.py  sonar.in  tunnel.py
tests/: __init__.py  test_cleanup_procedures.py  test_log_compression.py  test_logging_config.py  test_models.py  test_retention_policies.py  test_server.py  test_tunnel.py
